libsrc/rlib.h

struct rlib;
typedef struct rlib rlib;
struct rlib {
	gint current_page_number;
	gint current_line_number;
	gint detail_line_count;
	gint start_of_new_report;

	gint font_point;

	gint current_font_point;

	GHashTable *parameters;
	GHashTable *output_parameters;
	GHashTable *input_metadata;
	GSList *pcode_functions;

	GIConv output_encoder;
	gchar *output_encoder_name;

	time_t now; /* set when rlib starts now will then be a constant over the time of the report */

	struct rlib_signal_functions signal_functions[RLIB_SIGNALS];

	struct rlib_queries **queries;

	gint queries_count;
	struct rlib_rip_reports reportstorun[RLIB_MAXIMUM_REPORTS];
	struct rlib_results **results;

	struct rlib_part *parts[RLIB_MAXIMUM_REPORTS];
	gint parts_count;

	gint current_result;

	gint resultset_followers_count;
	struct rlib_resultset_followers followers[RLIB_MAXIMUM_FOLLOWERS];

	gint format;
	gint inputs_count;
	gboolean did_execute;

	gchar *special_locale;
	gchar *current_locale;

	gint html_debugging;

	struct output_filter *o;
	struct input_filters inputs[MAX_INPUT_FILTERS];
	struct environment_filter *environment;
	GSList *graph_regions;
	GSList *graph_minor_x_ticks;

	gint pcode_alpha_index;
	gint pcode_alpha_m_index;

	GIConv xml_encoder;
};
/***** PROTOTYPES: api.c ******************************************************/
rlib * rlib_init(void);
gint rlib_add_query_as(rlib *r, const gchar *input_name, const gchar *sql, const gchar *name);
gint rlib_add_report(rlib *r, const gchar *name);
gint rlib_add_report_from_buffer(rlib *r, gchar *buffer);
gint rlib_execute(rlib *r);
gchar * rlib_get_content_type_as_text(rlib *r);
gint rlib_spool(rlib *r);
gint rlib_set_output_format(rlib *r, gint format);
gint rlib_set_output_format_from_text(rlib *r, gchar * name);
gchar *rlib_get_output(rlib *r);
gint rlib_get_output_length(rlib *r);
gint rlib_add_resultset_follower(rlib *r, gchar *leader, gchar *follower);
gint rlib_add_resultset_follower_n_to_1(rlib *r, gchar *leader, gchar *leader_field, gchar *follower,gchar *follower_field );
gint rlib_add_datasource_mysql(rlib *r, const gchar *input_name, const gchar *database_host, const gchar *database_user,
	const gchar *database_password, const gchar *database_database);
gint rlib_add_datasource_postgres(rlib *r, const gchar *input_name, const gchar *conn);
gint rlib_add_datasource_odbc(rlib *r, const gchar *input_name, const gchar *source,
	const gchar *user, const gchar *password);
gint rlib_add_datasource_xml(rlib *r, const gchar *input_name);
gint rlib_add_datasource_csv(rlib *r, const gchar *input_name);
void rlogit_setmessagewriter(void(*writer)(rlib *r, const gchar *msg));