bindings/interfaces/rlibPINVOKE.cs

/* ----------------------------------------------------------------------------
 * This file was automatically generated by SWIG (http://www.swig.org).
 * Version 1.3.40
 *
 * Do not make changes to this file unless you know what you are doing--modify
 * the SWIG interface file instead.
 * ----------------------------------------------------------------------------- */


using System;
using System.Runtime.InteropServices;

class rlibPINVOKE {

  protected class SWIGExceptionHelper {

    public delegate void ExceptionDelegate(string message);
    public delegate void ExceptionArgumentDelegate(string message, string paramName);

    static ExceptionDelegate applicationDelegate = new ExceptionDelegate(SetPendingApplicationException);
    static ExceptionDelegate arithmeticDelegate = new ExceptionDelegate(SetPendingArithmeticException);
    static ExceptionDelegate divideByZeroDelegate = new ExceptionDelegate(SetPendingDivideByZeroException);
    static ExceptionDelegate indexOutOfRangeDelegate = new ExceptionDelegate(SetPendingIndexOutOfRangeException);
    static ExceptionDelegate invalidCastDelegate = new ExceptionDelegate(SetPendingInvalidCastException);
    static ExceptionDelegate invalidOperationDelegate = new ExceptionDelegate(SetPendingInvalidOperationException);
    static ExceptionDelegate ioDelegate = new ExceptionDelegate(SetPendingIOException);
    static ExceptionDelegate nullReferenceDelegate = new ExceptionDelegate(SetPendingNullReferenceException);
    static ExceptionDelegate outOfMemoryDelegate = new ExceptionDelegate(SetPendingOutOfMemoryException);
    static ExceptionDelegate overflowDelegate = new ExceptionDelegate(SetPendingOverflowException);
    static ExceptionDelegate systemDelegate = new ExceptionDelegate(SetPendingSystemException);

    static ExceptionArgumentDelegate argumentDelegate = new ExceptionArgumentDelegate(SetPendingArgumentException);
    static ExceptionArgumentDelegate argumentNullDelegate = new ExceptionArgumentDelegate(SetPendingArgumentNullException);
    static ExceptionArgumentDelegate argumentOutOfRangeDelegate = new ExceptionArgumentDelegate(SetPendingArgumentOutOfRangeException);

    [DllImport("rlibcsharp", EntryPoint="SWIGRegisterExceptionCallbacks_rlib")]
    public static extern void SWIGRegisterExceptionCallbacks_rlib(
                                ExceptionDelegate applicationDelegate,
                                ExceptionDelegate arithmeticDelegate,
                                ExceptionDelegate divideByZeroDelegate, 
                                ExceptionDelegate indexOutOfRangeDelegate, 
                                ExceptionDelegate invalidCastDelegate,
                                ExceptionDelegate invalidOperationDelegate,
                                ExceptionDelegate ioDelegate,
                                ExceptionDelegate nullReferenceDelegate,
                                ExceptionDelegate outOfMemoryDelegate, 
                                ExceptionDelegate overflowDelegate, 
                                ExceptionDelegate systemExceptionDelegate);

    [DllImport("rlibcsharp", EntryPoint="SWIGRegisterExceptionArgumentCallbacks_rlib")]
    public static extern void SWIGRegisterExceptionCallbacksArgument_rlib(
                                ExceptionArgumentDelegate argumentDelegate,
                                ExceptionArgumentDelegate argumentNullDelegate,
                                ExceptionArgumentDelegate argumentOutOfRangeDelegate);

    static void SetPendingApplicationException(string message) {
      SWIGPendingException.Set(new System.ApplicationException(message, SWIGPendingException.Retrieve()));
    }
    static void SetPendingArithmeticException(string message) {
      SWIGPendingException.Set(new System.ArithmeticException(message, SWIGPendingException.Retrieve()));
    }
    static void SetPendingDivideByZeroException(string message) {
      SWIGPendingException.Set(new System.DivideByZeroException(message, SWIGPendingException.Retrieve()));
    }
    static void SetPendingIndexOutOfRangeException(string message) {
      SWIGPendingException.Set(new System.IndexOutOfRangeException(message, SWIGPendingException.Retrieve()));
    }
    static void SetPendingInvalidCastException(string message) {
      SWIGPendingException.Set(new System.InvalidCastException(message, SWIGPendingException.Retrieve()));
    }
    static void SetPendingInvalidOperationException(string message) {
      SWIGPendingException.Set(new System.InvalidOperationException(message, SWIGPendingException.Retrieve()));
    }
    static void SetPendingIOException(string message) {
      SWIGPendingException.Set(new System.IO.IOException(message, SWIGPendingException.Retrieve()));
    }
    static void SetPendingNullReferenceException(string message) {
      SWIGPendingException.Set(new System.NullReferenceException(message, SWIGPendingException.Retrieve()));
    }
    static void SetPendingOutOfMemoryException(string message) {
      SWIGPendingException.Set(new System.OutOfMemoryException(message, SWIGPendingException.Retrieve()));
    }
    static void SetPendingOverflowException(string message) {
      SWIGPendingException.Set(new System.OverflowException(message, SWIGPendingException.Retrieve()));
    }
    static void SetPendingSystemException(string message) {
      SWIGPendingException.Set(new System.SystemException(message, SWIGPendingException.Retrieve()));
    }

    static void SetPendingArgumentException(string message, string paramName) {
      SWIGPendingException.Set(new System.ArgumentException(message, paramName, SWIGPendingException.Retrieve()));
    }
    static void SetPendingArgumentNullException(string message, string paramName) {
      Exception e = SWIGPendingException.Retrieve();
      if (e != null) message = message + " Inner Exception: " + e.Message;
      SWIGPendingException.Set(new System.ArgumentNullException(paramName, message));
    }
    static void SetPendingArgumentOutOfRangeException(string message, string paramName) {
      Exception e = SWIGPendingException.Retrieve();
      if (e != null) message = message + " Inner Exception: " + e.Message;
      SWIGPendingException.Set(new System.ArgumentOutOfRangeException(paramName, message));
    }

    static SWIGExceptionHelper() {
      SWIGRegisterExceptionCallbacks_rlib(
                                applicationDelegate,
                                arithmeticDelegate,
                                divideByZeroDelegate,
                                indexOutOfRangeDelegate,
                                invalidCastDelegate,
                                invalidOperationDelegate,
                                ioDelegate,
                                nullReferenceDelegate,
                                outOfMemoryDelegate,
                                overflowDelegate,
                                systemDelegate);

      SWIGRegisterExceptionCallbacksArgument_rlib(
                                argumentDelegate,
                                argumentNullDelegate,
                                argumentOutOfRangeDelegate);
    }
  }

  protected static SWIGExceptionHelper swigExceptionHelper = new SWIGExceptionHelper();

  public class SWIGPendingException {
    [ThreadStatic]
    private static Exception pendingException = null;
    private static int numExceptionsPending = 0;

    public static bool Pending {
      get {
        bool pending = false;
        if (numExceptionsPending > 0)
          if (pendingException != null)
            pending = true;
        return pending;
      } 
    }

    public static void Set(Exception e) {
      if (pendingException != null)
        throw new ApplicationException("FATAL: An earlier pending exception from unmanaged code was missed and thus not thrown (" + pendingException.ToString() + ")", e);
      pendingException = e;
      lock(typeof(rlibPINVOKE)) {
        numExceptionsPending++;
      }
    }

    public static Exception Retrieve() {
      Exception e = null;
      if (numExceptionsPending > 0) {
        if (pendingException != null) {
          e = pendingException;
          pendingException = null;
          lock(typeof(rlibPINVOKE)) {
            numExceptionsPending--;
          }
        }
      }
      return e;
    }
  }


  protected class SWIGStringHelper {

    public delegate string SWIGStringDelegate(string message);
    static SWIGStringDelegate stringDelegate = new SWIGStringDelegate(CreateString);

    [DllImport("rlibcsharp", EntryPoint="SWIGRegisterStringCallback_rlib")]
    public static extern void SWIGRegisterStringCallback_rlib(SWIGStringDelegate stringDelegate);

    static string CreateString(string cString) {
      return cString;
    }

    static SWIGStringHelper() {
      SWIGRegisterStringCallback_rlib(stringDelegate);
    }
  }

  static protected SWIGStringHelper swigStringHelper = new SWIGStringHelper();


  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_init")]
  public static extern IntPtr rlib_init();

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_add_datasource_mysql")]
  public static extern int rlib_add_datasource_mysql(HandleRef jarg1, string jarg2, string jarg3, string jarg4, string jarg5, string jarg6);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_add_datasource_postgres")]
  public static extern int rlib_add_datasource_postgres(HandleRef jarg1, string jarg2, string jarg3);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_add_datasource_odbc")]
  public static extern int rlib_add_datasource_odbc(HandleRef jarg1, string jarg2, string jarg3, string jarg4, string jarg5);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_add_datasource_xml")]
  public static extern int rlib_add_datasource_xml(HandleRef jarg1, string jarg2);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_add_datasource_csv")]
  public static extern int rlib_add_datasource_csv(HandleRef jarg1, string jarg2);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_add_query_as")]
  public static extern int rlib_add_query_as(HandleRef jarg1, string jarg2, string jarg3, string jarg4);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_add_report")]
  public static extern int rlib_add_report(HandleRef jarg1, string jarg2);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_add_report_from_buffer")]
  public static extern int rlib_add_report_from_buffer(HandleRef jarg1, string jarg2);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_execute")]
  public static extern int rlib_execute(HandleRef jarg1);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_get_content_type_as_text")]
  public static extern string rlib_get_content_type_as_text(HandleRef jarg1);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_spool")]
  public static extern int rlib_spool(HandleRef jarg1);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_set_output_format")]
  public static extern int rlib_set_output_format(HandleRef jarg1, int jarg2);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_add_resultset_follower_n_to_1")]
  public static extern int rlib_add_resultset_follower_n_to_1(HandleRef jarg1, string jarg2, string jarg3, string jarg4, string jarg5);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_add_resultset_follower")]
  public static extern int rlib_add_resultset_follower(HandleRef jarg1, string jarg2, string jarg3);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_set_output_format_from_text")]
  public static extern int rlib_set_output_format_from_text(HandleRef jarg1, string jarg2);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_get_output")]
  public static extern string rlib_get_output(HandleRef jarg1);

  [DllImport("rlibcsharp", EntryPoint="CSharp_rlib_get_output_length")]
  public static extern int rlib_get_output_length(HandleRef jarg1);
